# plantation

./: .gitignore  board_stats.py  engine.py  include.py  many_games.py  player.py  pyproject.toml  random_player.py  random_player_plus.py  readme.md  single_game.py
ai_players/: random_player.py  random_player_dumb.py  random_player_plus.py  scry_and_die.py
ai_players/paulc/: genetic.php  genetic.py
python/plantation/: board_stats.py  engine.py  include.py  player.py
python/plantation/ai_players/: human.py  notes.md  random_player.py  random_player_dumb.py  scry_and_die.py
python/plantation/ai_players/paulc/: AvianDinosaur.json  Coelacanth.json  Crocodilian.json  genetic.php  php_player_wrapper.py
python/plantation/martin/: board_stats.py  board_stats_engine.py  timing_engine.py
python/plantation/martin/ai_players/: T800.py  notes.md  scry_and_die_T800.py
scripts/: human_game.py  many_games.py  single_game.py  tournament.py
scripts/experimental/: experiment-1.py
scripts/experimental/lib/v1/: agxnt.py  game.py
